--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 
 <!-- MENU -->
 <div id='menu'>
-  <nav class="nav left">
+  <nav class="nav center">
     <ul>
       <li class="current"><a href="#">Grids</a></li>
       <li><a href="#">Slider</a></li>
-      <li><a href="#">Menu</a></li>
+      <li><a href="#">Menu</a>
+        <ul>
+          <li><a href="#">test 1</a></li>
+          <li><a href="#">test</a></li>
+        </ul>
+      </li>
       <li><a href="#">Fonts</a></li>
       <li><a href="#">Shadows</a></li>
       <li><a href="#">Botones</a></li>
