--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kraken Framework 0.5</title>
+	<title>Kraken Framework 0.6</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="css/kraken.css">
@@ -11,6 +11,14 @@
   <script src="js/responsiveslides.min.js"></script>
   <script src="js/jquery.scrollTo-1.4.3.1.js"></script>
   <script src="js/kraken.js"></script>
+
+<script>
+
+  Kraken({
+      pagesize : { state : true, width: 960, },
+  });
+
+</script>
 
   <!--[if lt IE 9]>
   <script src="http://css3-mediaqueries-js.googlecode.com/files/css3-mediaqueries.js"></script>
