--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="js/responsiveslides.min.js"></script>
   <script src="js/jquery.scrollTo-1.4.3.1.js"></script>
-  <script src="js/kraken.js"></script>
+  <script src="js/kraken.min.js"></script>
 
 <script>
 
