--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kraken Framework 0.6</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
 	<link rel="stylesheet" href="css/kraken.css">
 
@@ -15,7 +15,7 @@
 <script>
 
   Kraken({
-      pagesize : { state : true, width: 960, },
+      pagesize : { width: 1200, },
   });
 
 </script>
