config files and remove info

--- a/config.html
+++ b/config.html
@@ -21,6 +21,13 @@
 	<![endif]-->
 
  	<meta property="og:description" content="Kraken FrameWork" /> 
+
+<script>
+	Kraken({
+	      pagesize : { width: 780, },
+	  });
+</script>
+
 </head>
 
 <body>
@@ -58,6 +65,87 @@
 
 <br>
 
+<div class="span" value="3.5"></div>
+<div class="grid-12 center">
+	<div class="grid-2 button c_font" value="1">Font 1</div>
+	<div class="grid-2 button c_font" value="2">Font 2</div>
+	<div class="grid-2 button c_font" value="3">Font 3</div>
+	<div class="grid-2 button c_font" value="4">Font 4</div>
+	<div class="grid-2 button c_font" value="5">Font 5</div>
+</div>
+
+<div class="grid-12 Fonts">
+	
+<div class="grid-12 font_" value="1">
+  <h1>Titulo de prueba</h1>
+
+  <h2>Subtitulo de prueba</h2>
+
+  <h3>Texto</h3>
+
+  <h4>Texto</h4>
+
+  <p class="box">box</p>	
+</div>
+
+<div class="grid-12 font_" value="2">
+  <h1>Titulo de prueba</h1>
+
+  <h2>Subtitulo de prueba</h2>
+
+  <h3>Texto</h3>
+
+  <h4>Texto</h4>
+
+  <p class="box">box</p>	
+</div>
+
+<div class="grid-12 font_" value="3">
+  <h1>Titulo de prueba</h1>
+
+  <h2>Subtitulo de prueba</h2>
+
+  <h3>Texto</h3>
+
+  <h4>Texto</h4>
+
+  <p class="box">box</p>	
+</div>
+
+<div class="grid-12 font_" value="4">
+  <h1>Titulo de prueba</h1>
+
+  <h2>Subtitulo de prueba</h2>
+
+  <h3>Texto</h3>
+
+  <h4>Texto</h4>
+
+  <p class="box">box</p>	
+</div>
+
+<div class="grid-12 font_" value="5">
+  <h1>Titulo de prueba</h1>
+
+  <h2>Subtitulo de prueba</h2>
+
+  <h3>Texto</h3>
+
+  <h4>Texto</h4>
+
+  <p class="box">box</p>	
+</div>
+
+</div>
+
+<div class="span" value="3.5"></div>
+<hr>
+<h3>
+	Config Script:
+</h3>
+<div class="grid-12 box inset">
+	
+</div>
 
 	<!--END GRIDS-->
 	</div>
