--- a/index.html
+++ b/index.html
@@ -250,9 +250,12 @@
 <div class="span" value="3.5"></div>
 <hr>
 
-<p>
-<h3>Botones</h3>
-</p>
+<div class="grid-12">
+  <p>
+    <h3>Botones</h3>
+  </p>
+</div>
+
 <div class="span" value="3.5"></div>
 
 <p class="mL">Botones simples:</p>
@@ -306,6 +309,48 @@
     <a href="#" class="button">Logout</a>
   </div>
 </div>
+
+<div class="span" value="3.5"></div>
+
+<div class="grid-12">
+  <p>
+    <h3>Botones Iconos</h3>
+  </p>
+  
+  <a href="#" class="button icon arrowup">Up</a>
+  <a href="#" class="button icon arrowdown">Down</a>
+  <a href="#" class="button icon arrowleft">Left</a>
+  <a href="#" class="button icon arrowright">Rigth</a>
+  <a href="#" class="button icon approve">Approve</a>
+  <a href="#" class="button icon add">Add</a>
+  <a href="#" class="button icon remove">Remove</a>
+  <a href="#" class="button icon log">Log</a>
+  <a href="#" class="button icon calendar">Calendar</a>
+  <a href="#" class="button icon chat">Chat</a>
+  <a href="#" class="button icon clock">Clock</a>
+  <a href="#" class="button icon settings">Settings</a>
+  <a href="#" class="button icon comment">Comment</a>
+  <a href="#" class="button icon fork">Fork</a>
+  <a href="#" class="button icon like">Like</a>
+  <a href="#" class="button icon favorite">Favorite</a>
+  <a href="#" class="button icon home">Home</a>
+  <a href="#" class="button icon key">Key</a>
+  <a href="#" class="button icon lock">Lock</a>
+  <a href="#" class="button icon unlock">Unlock</a>
+  <a href="#" class="button icon loop">Loop</a>
+  <a href="#" class="button icon search">Search</a>
+  <a href="#" class="button icon mail">Mail</a>
+  <a href="#" class="button icon move">Move</a>
+  <a href="#" class="button icon edit">Edit</a>
+  <a href="#" class="button icon pin">Pin</a>
+  <a href="#" class="button icon reload">Relod</a>
+  <a href="#" class="button icon rss">RSS</a>
+  <a href="#" class="button icon tag">Tag</a>
+  <a href="#" class="button icon trash">Trash</a>
+  <a href="#" class="button icon user">User</a>
+
+</div>
+
 
 <div class="span" value="3.5"></div>
 
