--- a/config.html
+++ b/config.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kraken Framework 0.5</title>
+	<title>Kraken Framework Configuration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="css/kraken.css">
@@ -71,7 +71,6 @@
 	<div class="grid-2 button c_font" value="2">Font 2</div>
 	<div class="grid-2 button c_font" value="3">Font 3</div>
 	<div class="grid-2 button c_font" value="4">Font 4</div>
-	<div class="grid-2 button c_font" value="5">Font 5</div>
 </div>
 
 <div class="grid-12 Fonts">
@@ -113,18 +112,6 @@
 </div>
 
 <div class="grid-12 font_" value="4">
-  <h1>Titulo de prueba</h1>
-
-  <h2>Subtitulo de prueba</h2>
-
-  <h3>Texto</h3>
-
-  <h4>Texto</h4>
-
-  <p class="box">box</p>	
-</div>
-
-<div class="grid-12 font_" value="5">
   <h1>Titulo de prueba</h1>
 
   <h2>Subtitulo de prueba</h2>
