--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
 
 	<link rel="stylesheet" href="css/kraken.css">
 
-	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script lang="javascript" src="js/jquery.min.js"></script>
   <script src="js/responsiveslides.min.js"></script>
-  <script src="js/jquery.scrollTo-1.4.3.1.js"></script>
-  <script src="js/kraken.min.js"></script>
+  <script src="js/kraken.js"></script>
 
 <script>
+$(document).ready(function(){
 
   Kraken({
-      pagesize : { width: 1024, },
+      pagesize : { width: 800, },
   });
+
+    // Kraken.progress({
+    //   obj: ".bar3",
+    //   progress: 80
+    // });
+
+    // Kraken.progress({
+    //   obj: ".bar5",
+    //   progress: 80
+    // });
+      
+});
 
 </script>
 
@@ -39,7 +51,7 @@
       <li><a href="#">Menu</a>
         <ul>
           <li><a href="#">test 1</a></li>
-          <li><a href="#">test</a></li>
+          <li><a href="#" class="MenuClose">Close</a></li>
         </ul>
       </li>
       <li><a href="#">Fonts</a></li>
@@ -72,7 +84,7 @@
       Con la integración de elementos pre diseñados.
       </div>
     </p>
-    <a href="https://github.com/ivancduran/kraken"><img src="img/github.png" class="center" width="100"></a>
+    <a href="https://github.com/ivancduran/kraken"><img src="https://i2.wp.com/a248.e.akamai.net/assets.github.com/images/gravatars/gravatar-user-420.png" class="center" width="100"></a>
   </div>
 
 </div>
@@ -154,15 +166,15 @@
     <div class="callbacks_container">
       <ul class="rslides" id="slider">
         <li>
-          <img src="img/1.jpg" alt="">
+          <img src="http://placehold.it/800x400&text=uno" alt="">
           <p class="caption">Hola!</p>
         </li>
         <li>
-          <img src="img/2.jpg" alt="">
+          <img src="http://placehold.it/800x400&text=dos" alt="">
           <p class="caption">Soy un Slider!</p>
         </li>
         <li>
-          <img src="img/3.jpg" alt="">
+          <img src="http://placehold.it/800x400&text=tres" alt="">
           <p class="caption">Whoaaa!</p>
         </li>
       </ul>
@@ -241,11 +253,11 @@
   <h3 class="grid-12 mL">Shadow</h3>
   </p>
 
-    <img src="img/1.jpg" class="shadow grid-4" alt="">
+    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow grid-4" alt="">
 
-    <img src="img/2.jpg" class="shadow circle grid-4 hide" alt="">
+    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow circle grid-4 hide" alt="">
 
-    <img src="img/1.jpg" class="shadow grid-4" alt="">
+    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow grid-4" alt="">
 
 <div class="span" value="3.5"></div>
 <hr>
@@ -351,11 +363,74 @@
 
 </div>
 
+<div class="span" value="3.5"></div>
+
+<div class="grid-12">
+<h3>Progress Bar</h3>
+  
+    <div class="progress">
+      <span style="width: 20%;"><span>20%</span></span>
+    </div>
+
+    <div class="progress bar2">
+      <span class="green" style="width: 40%;"><span>40%</span></span>
+    </div>
+
+    <div class="progress bar3">
+      <span class="orange" style="width: 60%;"><span>60%</span></span>
+    </div>
+
+    <div class="progress bar4">
+      <span class="red" style="width: 80%;"><span>80%</span></span>
+    </div>
+
+    <div class="progress bar5">
+      <span class="blue" style="width: 100%;"><span>100%</span></span>
+    </div>
+</div>
+
+<div class="span" value="3.5"></div>
+
+<div class="grid-12">
+  <h3>Tooltip</h3>
+
+  <a href="#0" tooltip-text="I appear on top." class="tooltip-1">Top</a>
+  <a href="#0" tooltip-text="I appear on top." class="tooltip-2">Bottom</a>
+</div>
+
+<div class="span" value="3.5"></div>
+
+<div class="grid-12">
+<h3>Caption</h3>
+
+  <figure class="effeckt-caption effeckt-caption-1 grid-6">
+    <img src="http://placehold.it/300x200&text=caption+2" alt="">
+    <figcaption>
+      <div class="effeckt-figcaption-wrap">
+        <h3>Appear</h3>
+        <p>Lorem ipsum dolar.</p>
+      </div>
+    </figcaption>
+  </figure>
+
+  <figure class="effeckt-caption effeckt-caption-5 grid-6">
+    <img src="http://placehold.it/300x200&text=caption+2" alt="">
+    <figcaption>
+      <div class="effeckt-figcaption-wrap">
+        <h3>Cover</h3>
+        <p>Lorem ipsum dolar.</p>
+      </div>
+    </figcaption>
+  </figure>
+</div>
+
 <!--END GRIDS-->
   </div>
 
 <!--END WRAP-->
 </div>
+
+<!-- <div class="bottom-bar center">hola</div> -->
 
 <div class="menuBack"></div>
 </body>
