--- a/pages/progress.html
+++ b/pages/progress.html
@@ -5,23 +5,25 @@
 	<title>Kraken Framework 0.7</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="css/kraken.css">
+  <link rel="stylesheet" href="../css/kraken.css">
 
-	<script lang="javascript" src="js/jquery.min.js"></script>
-  <script src="js/responsiveslides.min.js"></script>
-  <script src="js/kraken.p.js"></script>
+  <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="../js/responsiveslides.min.js"></script>
+  <script src="../js/jquery.scrollTo-1.4.3.1.js"></script>
+  <script src="../js/kraken.js"></script>
 
 <script>
 
 $(document).ready(function(){
 
-  $.Kraken({ pagesize : { width: 900 } });
-
-$('.botton').on('click', function(){
+$.Kraken({ pagesize : { width: 1024 } });
 
   rand = function (){
    return Math.floor((Math.random()*100)+1);
   }
+
+$('.botton').on('click', function(){
+
 
   $('.bar1').KrakenTrigger('Progress', { progress : rand()} );
   $('.bar2').KrakenTrigger('Progress', { progress : rand()} );
@@ -32,11 +34,6 @@ $('.botton').on('click', function(){
   $('.testeval1').KrakenTrigger('Eval', { type : 'email'} );
   $('.testeval3').KrakenTrigger('Eval', { type : 'email'} );
   $('.testeval2').KrakenTrigger('Eval', { get : true } );
-
-  // $('.grids').append('<iframe src="http://200.76.23.18/encoder/" style="display:none;"></iframe>');
-  // setTimeout(function(){
-  //   $('iframe').remove();
-  // },4000);
 
 });
 
@@ -56,24 +53,27 @@ $('.botton').on('click', function(){
 
 <body>
 
-<!-- MENU -->
+<!--MENU-->
 <div id='menu'>
   <nav class="nav center">
     <ul>
-      <li class="current"><a href="#">Grids</a></li>
-      <li><a href="#">Slider</a></li>
-      <li><a href="#">Menu</a>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="grids.html">Grids</a></li>
+      <li><a href="slider.html">Slider</a></li>
+      <li><a href="#">Menu Test</a>
         <ul>
-          <li><a href="#">test 1</a></li>
-          <li><a href="#" class="MenuClose">Close</a></li>
+          <li><a href="#">Test 1</a></li>
+          <li><a href="#" class="MenuClose">Test 2</a></li>
         </ul>
       </li>
-      <li><a href="#">Fonts</a></li>
-      <li><a href="#">Shadows</a></li>
-      <li><a href="#">Botones</a></li>
+      <li><a href="fonts.html">Fonts</a></li>
+      <li class="current"><a href="progress.html">Progress</a></li>
+      <li><a href="buttons.html">Buttons</a></li>
+      <li><a href="others.html">Others</a></li>
     </ul>
   </nav>
 </div>
+<!--END MENU-->
 
 <!--WRAP-->
 <div class="wrap">
@@ -122,7 +122,7 @@ $('.botton').on('click', function(){
 <!--END WRAP-->
 </div>
 
-<!-- <div class="bottom-bar center">hola</div> -->
+<!-- <div class="bottom-bar center">:P</div> -->
 
 <div class="menuBack"></div>
 </body>
