--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ $(document).ready(function(){
 	<!--GRIDS-->
 	<div class="grids">
 
+<div class="span" value="3.5"></div>
+
 <div class="grid-12 mL">
   <div class="grid-10">
     <h1 title="¿Que es Kraken?">
@@ -104,6 +106,7 @@ $(document).ready(function(){
 </div>
 
 
+<div class="footer_union">&nbsp</div>
 <footer class="center">
   <div class="footer wrap">
   <!-- <img src="img/kraken.png" class="grid-12"> -->
