--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -20,8 +20,11 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ pagesize : { width: 1024 } });
-  // $('.bar3').KrakenTrigger('Progress', { progress : 80 } );
+  $.Kraken({ 
+    pagesize : { width: 1024 },
+    bgimg    : { img : '004' },  
+    bgcolor  : { color : '51fddf'},
+  });
 
 });
 </script>
