--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -20,7 +20,12 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ pagesize : { width: 1024 } });
+  $.Kraken({ 
+    pagesize : { width: 1024 },
+    bgimg    : { img : '018' },  
+    bgcolor  : { color : 'bc9afd'},
+  });
+
 
 });
 </script>
