--- a/pages/slider.html
+++ b/pages/slider.html
@@ -20,7 +20,11 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ pagesize : { width: 1024 } });
+  $.Kraken({ 
+    pagesize : { width: 1024 },
+    bgimg    : { img : '003' },  
+    bgcolor  : { color : 'dd231d'},
+  });
 
 });
 </script>
