--- a/pages/grids.html
+++ b/pages/grids.html
@@ -20,7 +20,11 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ pagesize : { width: 1024 } });
+  $.Kraken({ 
+    pagesize : { width: 1024 },
+    bgimg    : { img : '014' },  
+    bgcolor  : { color : '8be13a'},
+  });
 
 });
 </script>
