--- a/pages/others.html
+++ b/pages/others.html
@@ -20,7 +20,11 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ pagesize : { width: 1024 } });
+  $.Kraken({ 
+    pagesize : { width: 1024 },
+    bgimg    : { img : '009' },  
+    bgcolor  : { color : '8be13a'},
+  });
 
 });
 </script>
@@ -78,8 +82,8 @@ $(document).ready(function(){
 <div class="grid-12">
   <h3>Tooltip</h3>
 
-  <a href="#0" tooltip-text="I appear on top." class="tooltip-1">Top</a>
-  <a href="#0" tooltip-text="I appear on top." class="tooltip-2">Bottom</a>
+  <a href="#" tooltip-text="I appear on top." class="tooltip-1">Top</a>
+  <a href="#" tooltip-text="I appear on bottom." class="tooltip-2">Bottom</a>
 </div>
 
 <div class="span" value="3.5"></div>
