--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 $(document).ready(function(){
 
   //New version
-  $.Kraken({ pagesize : { width: 1024 } });
-  // $('.bar3').KrakenTrigger('Progress', { progress : 80 } );
+  $.Kraken({ 
+    pagesize : { width: 1024 },
+    bgimg    : { img : '005' },  
+    bgcolor  : { },
+  });
 
 });
 
@@ -76,6 +79,8 @@ $(document).ready(function(){
       <div class="toptext">
         Framework basado en html5 para diseñar prototipos funcionales fácil y rápido.
       </div>
+
+      <div class="break-a"></div>
       <div class="midtext">
       El propósito principal es que el usuario final no requiera conocimientos avanzados de jQuery o CSS.
       Con la integración de elementos pre diseñados.
@@ -95,9 +100,12 @@ $(document).ready(function(){
       </div>
 
 <div class="span" value="3.5"></div>
-  <hr>
+ 
+ <div class="break-a"></div>
 
-
+ <div class="center">
+   <img src="img/down.png" alt="">
+ </div>
 
 <!--END GRIDS-->
   </div>
@@ -107,14 +115,76 @@ $(document).ready(function(){
 
 
 <div class="footer_union">&nbsp</div>
-<footer class="center">
+<footer>
   <div class="footer wrap">
   <!-- <img src="img/kraken.png" class="grid-12"> -->
-    <div class="grid-4">1</div>
-    <div class="grid-4">1</div>
-    <div class="grid-4">1</div>
-  </div>
+    <div class="grid-4 center">
+      <div class="span" value="5"></div>
+      <img src="img/minKraken.png" alt="">
+      <h5>@ 2013 Kraken</h5>
+    </div>
 
+    <div class="grid-2">
+      <div class="span" value="5"></div>
+      <h3>
+          Home
+      </h3>
+      <ul class="size-3">
+        <li>Grids</li>
+        <li>Slider</li>
+        <li>Fonts</li>
+        <li>Progress</li>
+        <li>Buttons</li>
+        <li>Others</li>
+      </ul>
+    </div>
+
+    <div class="grid-2">
+      <div class="span" value="5"></div>
+      <h3>
+          Test
+      </h3>
+      <ul class="size-3">
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </ul>
+    </div>
+        <div class="grid-2">
+      <div class="span" value="5"></div>
+      <h3>
+          Test
+      </h3>
+      <ul class="size-3">
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </ul>
+    </div>
+
+        <div class="grid-2">
+      <div class="span" value="5"></div>
+      <h3>
+          Test
+      </h3>
+      <ul class="size-3">
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </ul>
+    </div>
+
+
+  </div>
 </footer>
 
 
