some modifications and fix ie8

--- a/pages/others.html
+++ b/pages/others.html
@@ -92,7 +92,7 @@ $(document).ready(function(){
 <div class="grid-12">
 <h3>Caption</h3>
 
-  <figure class="effeckt-caption effeckt-caption-1 grid-6">
+  <figure class="effeckt-caption effeckt-caption-1 grid-6 shadow">
     <img src="http://placehold.it/300x200&text=caption+2" alt="">
     <figcaption>
       <div class="effeckt-figcaption-wrap">
@@ -102,7 +102,7 @@ $(document).ready(function(){
     </figcaption>
   </figure>
 
-  <figure class="effeckt-caption effeckt-caption-5 grid-6">
+  <figure class="effeckt-caption effeckt-caption-5 grid-6 shadow">
     <img src="http://placehold.it/300x200&text=caption+2" alt="">
     <figcaption>
       <div class="effeckt-figcaption-wrap">
