--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<title>Kraken Framework 0.7</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
-	<link rel="stylesheet" href="css/kraken.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/kraken.css">
 
 	<script lang="javascript" src="js/jquery.min.js"></script>
   <script src="js/responsiveslides.min.js"></script>
-  <script src="js/kraken.js"></script>
+  <script src="js/kraken.min.js"></script>
 
 <script>
 
@@ -18,7 +19,7 @@ $(document).ready(function(){
   //New version
   $.Kraken({ 
     pagesize : { width: 1024 },
-    bgimg    : { img : '005' },  
+    bgimg    : { img : '004' },  
     bgcolor  : { },
   });
 
