--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -5,8 +5,9 @@
 	<title>Kraken Framework 0.5</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, user-scalable=no">
 
-	<link rel="stylesheet" href="../css/kraken.css">
-
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/kraken.css">
+  
 	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="../js/responsiveslides.min.js"></script>
 	<script src="../js/kraken.js"></script>
