--- a/pages/progress.html
+++ b/pages/progress.html
@@ -5,6 +5,7 @@
 	<title>Kraken Framework 0.7</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
+  <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/kraken.css">
 
   <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
