--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ $(document).ready(function(){
 	<!--GRIDS-->
 	<div class="grids">
 
+
+
 <div class="span" value="3.5"></div>
 
 <div class="grid-12 mL">
@@ -114,8 +116,9 @@ $(document).ready(function(){
 <!--END WRAP-->
 </div>
 
+<!-- <div class="footer_union">&nbsp</div> -->
+<div class="clearfix"></div>
 
-<div class="footer_union">&nbsp</div>
 <footer>
   <div class="footer wrap">
   <!-- <img src="img/kraken.png" class="grid-12"> -->
@@ -184,10 +187,8 @@ $(document).ready(function(){
       </ul>
     </div>
 
-
   </div>
 </footer>
-
 
 <!-- <div class="bottom-bar center">hola</div> -->
 
