--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -72,7 +72,7 @@ $(document).ready(function(){
     <p>
       Todos tus textos de adapran automáticamente a tu pantalla, no tienes que programar nada, solo preocupate por escribir.
     </p>
-    <div class="midText box">Helvetica, Arial, GentiumBookBasic, Lato,  OpenSans, Satellite, Ubuntu fonts.</div>
+    <div class="midText box">Lato</div>
   </div>
 </div>
 
