--- a/pages/others.html
+++ b/pages/others.html
@@ -114,6 +114,13 @@ $(document).ready(function(){
   </figure>
 </div>
 
+<div class="grid-12">
+  <h3>Loading</h3>
+  <div class="center">
+    <span class="loading"></span>
+  </div>
+</div>
+
 <!--END SLIDER-->
 
 <div class="span" value="4.5"></div>
