changes on estructure

--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -52,6 +52,7 @@ $(document).ready(function(){
       <li class="current"><a href="fonts.html">Fonts</a></li>
       <li><a href="progress.html">Progress</a></li>
       <li><a href="buttons.html">Buttons</a></li>
+      <li><a href="modal.html">Modal</a></li>
       <li><a href="others.html">Others</a></li>
     </ul>
   </nav>
