--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Kraken Framework 0.7</title>
+	<title>Kraken Framework 0.8</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="css/reset.css">
@@ -55,6 +55,7 @@ $(document).ready(function(){
       <li><a href="pages/fonts.html">Fonts</a></li>
       <li><a href="pages/progress.html">Progress</a></li>
       <li><a href="pages/buttons.html">Buttons</a></li>
+      <li><a href="pages/modal.html">Modal</a></li>
       <li><a href="pages/others.html">Others</a></li>
     </ul>
   </nav>
@@ -116,7 +117,6 @@ $(document).ready(function(){
 <!--END WRAP-->
 </div>
 
-<!-- <div class="footer_union">&nbsp</div> -->
 <div class="clearfix"></div>
 
 <footer>
