--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -51,6 +51,7 @@ $(document).ready(function(){
       <li><a href="fonts.html">Fonts</a></li>
       <li><a href="progress.html">Progress</a></li>
       <li class="current"><a href="buttons.html">Buttons</a></li>
+      <li><a href="modal.html">Modal</a></li>
       <li><a href="others.html">Others</a></li>
     </ul>
   </nav>
