--- a/pages/progress.html
+++ b/pages/progress.html
@@ -29,7 +29,6 @@ $(document).ready(function(){
 
 $('.botton').on('click', function(){
 
-
   $('.bar1').KrakenTrigger('Progress', { progress : rand()} );
   $('.bar2').KrakenTrigger('Progress', { progress : rand()} );
   $('.bar3').KrakenTrigger('Progress', { progress : rand()} );
@@ -76,6 +75,7 @@ $('.botton').on('click', function(){
       <li><a href="fonts.html">Fonts</a></li>
       <li class="current"><a href="progress.html">Progress</a></li>
       <li><a href="buttons.html">Buttons</a></li>
+      <li><a href="modal.html">Modal</a></li>
       <li><a href="others.html">Others</a></li>
     </ul>
   </nav>
