--- a/pages/modal.html
+++ b/pages/modal.html
@@ -99,12 +99,14 @@ $(document).ready(function(){
       <div class="md-content">
         <h3>Fall</h3>
         <div>
-          <p>This is a modal window. You can do the following things with it:</p>
-          <ul>
-            <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
-            <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
-            <li><strong>Close:</strong> click on the button below to close the modal.</li>
-          </ul>
+          <div class="md-text">
+            <p>This is a modal window. You can do the following things with it:</p>
+            <ul>
+              <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
+              <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
+              <li><strong>Close:</strong> click on the button below to close the modal.</li>
+            </ul>
+          </div>
           <button class="md-close button">Close me!</button>
         </div>
       </div>
@@ -114,12 +116,14 @@ $(document).ready(function(){
       <div class="md-content">
         <h3>3D Sign</h3>
         <div>
-          <p>This is a modal window. You can do the following things with it:</p>
-          <ul>
-            <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
-            <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
-            <li><strong>Close:</strong> click on the button below to close the modal.</li>
-          </ul>
+          <div class="md-text">
+            <p>This is a modal window. You can do the following things with it:</p>
+            <ul>
+              <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
+              <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
+              <li><strong>Close:</strong> click on the button below to close the modal.</li>
+            </ul>
+          </div>
           <button class="md-close button">Close me!</button>
         </div>
       </div>
