--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/kraken.css">
 
-	<script lang="javascript" src="vendor/jquery/jquery.min.js"></script>
-  <script lang="javascript" src="vendor/responsiveSlides.js/responsiveslides.js"></script>
+	<script lang="javascript" src="js/jquery.min.js"></script>
+  <script src="js/responsiveslides.min.js"></script>
   <script src="js/kraken.min.js"></script>
 
 <script>
