--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/kraken.css">
   
 	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="../vendor/responsiveSlides.js/responsiveslides.js"></script>
+	<script src="../js/responsiveslides.min.js"></script>
 	<script src="../js/kraken.js"></script>
 
 	<!--[if lt IE 9]>
