--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ $(document).ready(function(){
 </div>
 
 <!--WRAP-->
-<div class="wrap">
+<div class="wrap container">
 
 	<!--GRIDS-->
 	<div class="grids">
