--- a/pages/grids.html
+++ b/pages/grids.html
@@ -59,7 +59,7 @@ $(document).ready(function(){
 <!--END MENU-->
 
 <!--WRAP-->
-<div class="wrap">
+<div class="wrap container">
 
 	<!--GRIDS-->
 	<div class="grids">
