--- a/pages/modal.html
+++ b/pages/modal.html
@@ -66,7 +66,7 @@ $(document).ready(function(){
 <!--END MENU-->
 
 <!--WRAP-->
-<div class="wrap">
+<div class="wrap container">
 
 	<!--GRIDS-->
 	<div class="grids">
