--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -60,7 +60,7 @@ $(document).ready(function(){
 <!--END MENU-->
 
 <!--WRAP-->
-<div class="wrap">
+<div class="wrap container">
 
 	<!--GRIDS-->
 	<div class="grids">
