--- a/pages/progress.html
+++ b/pages/progress.html
@@ -83,7 +83,7 @@ $('.botton').on('click', function(){
 <!--END MENU-->
 
 <!--WRAP-->
-<div class="wrap">
+<div class="wrap container">
 
 	<!--GRIDS-->
 	<div class="grids">
