--- a/pages/modal.html
+++ b/pages/modal.html
@@ -34,6 +34,22 @@ $(document).ready(function(){
       close : 'Yes!',
     });
 
+  setTimeout(function(){
+    $('#modal-3').KrakenTrigger('Modal',
+    { 
+      title : 'This is a example',
+      text  : 'This is a Trigger Dinamic Example',
+      close : 'Yes!',
+    });
+    $('#modal-3').KrakenTrigger('Modal', true );
+    setTimeout(function(){
+      $('#modal-3').KrakenTrigger('Modal', false );
+    },5000);
+  },3000);
+
+
+
+
 });
 </script>
 
