--- a/pages/grids.html
+++ b/pages/grids.html
@@ -77,45 +77,45 @@ $(document).ready(function(){
     </p>
   </div>
 </div>
+    
+  <!-- GRIDS EXAMPLE -->
+  <div class="grid-12 bgGray center">12</div>
 
-<!-- GRIDS EXAMPLE -->
-<div class="grid-12 bgGray">Grid 12</div>
+  <div class="grid-11 bgGray center">11</div>
+  <div class="grid-1 bgGray center">1</div>
 
-<div class="grid-11 bgGray">Grid 11</div>
-<div class="grid-1 bgGray">Grid 1</div>
+  <div class="grid-10 bgGray center">10</div>
+  <div class="grid-2 bgGray center">2</div>
 
-<div class="grid-10 bgGray">Grid 10</div>
-<div class="grid-2 bgGray">Grid 2</div>
+  <div class="grid-9 bgGray center">9</div>
+  <div class="grid-3 bgGray center">3</div>
 
-<div class="grid-9 bgGray">Grid 9</div>
-<div class="grid-3 bgGray">Grid 3</div>
+  <div class="grid-8 bgGray center">8</div>
+  <div class="grid-4 bgGray center">4</div>
 
-<div class="grid-8 bgGray">Grid 8</div>
-<div class="grid-4 bgGray">Grid 4</div>
+  <div class="grid-7 bgGray center">7</div>
+  <div class="grid-5 bgGray center">5</div>
 
-<div class="grid-7 bgGray">Grid 7</div>
-<div class="grid-5 bgGray">Grid 5</div>
+  <div class="grid-6 bgGray center">6</div>
+  <div class="grid-6 bgGray center">6</div>
 
-<div class="grid-6 bgGray">Grid 6</div>
-<div class="grid-6 bgGray">Grid 6</div>
+  <div class="grid-5 bgGray center">5</div>
+  <div class="grid-7 bgGray center">7</div>
 
-<div class="grid-5 bgGray">Grid 5</div>
-<div class="grid-7 bgGray">Grid 7</div>
+  <div class="grid-4 bgGray center">4</div>
+  <div class="grid-8 bgGray center">8</div>
 
-<div class="grid-4 bgGray">Grid 4</div>
-<div class="grid-8 bgGray">Grid 8</div>
+  <div class="grid-3 bgGray center">3</div>
+  <div class="grid-9 bgGray center">9</div>
 
-<div class="grid-3 bgGray">Grid 3</div>
-<div class="grid-9 bgGray">Grid 9</div>
+  <div class="grid-2 bgGray center">2</div>
+  <div class="grid-10 bgGray center">10</div>
 
-<div class="grid-2 bgGray">Grid 2</div>
-<div class="grid-10 bgGray">Grid 10</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-11 bgGray center">11</div>
 
-<div class="grid-1 bgGray">Grid 1</div>
-<div class="grid-11 bgGray">Grid 11</div>
-
-<div class="grid-12 bgGray">Grid 12</div>
-<!--END GRIDS EXAMPLE-->
+  <div class="grid-12 bgGray center">12</div>
+  <!--END GRIDS EXAMPLE-->
 
 
 
