--- a/pages/others.html
+++ b/pages/others.html
@@ -84,8 +84,9 @@ $(document).ready(function(){
 <div class="grid-12">
   <h3>Tooltip</h3>
 
-  <a href="#" tooltip-text="I appear on top." class="tooltip-1">Top</a>
-  <a href="#" tooltip-text="I appear on bottom." class="tooltip-2">Bottom</a>
+  
+  <a href="#" tooltip-text="I appear on top." class="button big tooltip-1">Top</a>
+  <a href="#" tooltip-text="I appear on bottom." class="button big tooltip-2">Bottom</a>
 </div>
 
 <div class="span" value="3.5"></div>
@@ -94,7 +95,7 @@ $(document).ready(function(){
 <div class="grid-12">
 <h3>Caption</h3>
 
-  <figure class="effeckt-caption effeckt-caption-1 grid-6 shadow">
+  <figure class="effeckt-caption effeckt-caption-1 grid-6">
     <img src="http://placehold.it/300x200&text=caption+2" alt="">
     <figcaption>
       <div class="effeckt-figcaption-wrap">
@@ -104,7 +105,7 @@ $(document).ready(function(){
     </figcaption>
   </figure>
 
-  <figure class="effeckt-caption effeckt-caption-5 grid-6 shadow">
+  <figure class="effeckt-caption effeckt-caption-5 grid-6">
     <img src="http://placehold.it/300x200&text=caption+2" alt="">
     <figcaption>
       <div class="effeckt-figcaption-wrap">
@@ -121,6 +122,13 @@ $(document).ready(function(){
     <span class="loading"></span>
   </div>
 </div>
+
+
+
+<label class="switch">
+  <input type="checkbox" class="switch__input">
+  <div class="switch__toggle"></div>
+</label>
 
 <!--END SLIDER-->
 
