--- a/pages/grids.html
+++ b/pages/grids.html
@@ -115,6 +115,42 @@ $(document).ready(function(){
   <div class="grid-11 bgGray center">11</div>
 
   <div class="grid-12 bgGray center">12</div>
+
+
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+  <div class="grid-1 bgGray center">1</div>
+
+  <div class="grid-2 bgGray center">2</div>
+  <div class="grid-2 bgGray center">2</div>
+  <div class="grid-2 bgGray center">2</div>
+  <div class="grid-2 bgGray center">2</div>
+  <div class="grid-2 bgGray center">2</div>
+  <div class="grid-2 bgGray center">2</div>
+
+  <div class="grid-3 bgGray center">3</div>
+  <div class="grid-3 bgGray center">3</div>
+  <div class="grid-3 bgGray center">3</div>
+  <div class="grid-3 bgGray center">3</div>
+
+  <div class="grid-4 bgGray center">4</div>
+  <div class="grid-4 bgGray center">4</div>
+  <div class="grid-4 bgGray center">4</div>
+
+  <div class="grid-5 bgGray center">5</div>
+  <div class="grid-6 bgGray center">6</div>
+  <div class="grid-1 bgGray center">1</div>
+
+
   <!--END GRIDS EXAMPLE-->
 
 
