some changes in css

--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/kraken.css">
 
-  <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script lang="javascript" src="../js/jquery.min.js"></script>
+  <!-- // <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
   <script src="../js/responsiveslides.min.js"></script>
   <script src="../js/kraken.js"></script>
 
@@ -31,7 +32,7 @@ $(document).ready(function(){
 
   function removeAnimation(){
     setTimeout(function() {
-    $('.bubble').removeClass('animbubble')
+    $('.bubble').removeClass('animbubble');
     }, 1000);           
   }
 
