--- a/pages/others.html
+++ b/pages/others.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/kraken.css">
 
-	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script lang="javascript" src="../js/jquery.min.js"></script>
+  <!-- // <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 	<script src="../js/responsiveslides.min.js"></script>
 	<script src="../js/kraken.js"></script>
 
@@ -72,11 +73,27 @@ $(document).ready(function(){
   </div>
 </div>
 
-    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow grid-4" alt="">
-
-    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow circle grid-4 hide" alt="">
+    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow grid-4 focus" alt="">
 
     <img src="http://placehold.it/800x400&text=Grid+4" class="shadow grid-4" alt="">
+
+    <img src="http://placehold.it/800x400&text=Grid+4" class="shadow grid-4" alt="">
+
+<br>
+<br>
+    <div class="circle grid-4">
+      <img src="http://placehold.it/400x400&text=Grid+4" class="user grid-12"/>
+    </div>
+
+    <div class="circle grid-4">
+      <img src="http://placehold.it/400x400&text=Grid+4" class="user grid-12"/>
+    </div>
+
+    <div class="circle grid-4">
+      <img src="http://placehold.it/400x400&text=Grid+4" class="user grid-12"/>
+    </div>
+
+
 
 <div class="span" value="3.5"></div>
 <hr>
