--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/kraken.css">
   
-	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script lang="javascript" src="../js/jquery.min.js"></script>
+  <!-- // <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 	<script src="../js/responsiveslides.min.js"></script>
 	<script src="../js/kraken.js"></script>
 
@@ -100,6 +101,11 @@ $(document).ready(function(){
 
 
   <input type="text" value="Input">
+  
+  <input type="text" value="Input" class="input">
+
+  <input type="text" value="Input" class="line">
+
   <div class="span" value="2.5"></div>
 
   <textarea name="test" id="" cols="50" rows="4" class="grid-10">Text Area</textarea>
