--- a/pages/grids.html
+++ b/pages/grids.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/kraken.css">
 
-	<script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script lang="javascript" src="../js/jquery.min.js"></script>
+	<!-- // <script lang="javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 	<script src="../js/responsiveslides.min.js"></script>
 	<script src="../js/kraken.js"></script>
 
